[package]
name = "lpc55-hal"
version = "0.1.0"
edition = "2018"
description   = "Hardware Abstraction Layer (HAL) for the NXP LPC55S6x ARM Cortex-33 microcontrollers"
repository = "https://github.com/nickray/lpc55-hal"
license = "Apache-2.0 OR MIT"
readme = "README.md"
documentation = "https://docs.rs/lpc55-hal"
keywords = ["no-std", "cortex-m", "nxp", "lpc", "embedded-hal-impl"]
categories = ["embedded", "no-std"]
authors = ["Nicolas Stalder <n@stalder.io>", "Conor Patrick <conorpp94@gmail.com>", "Hanno Braun <hanno@braun-robotics.com>"]
build = "build.rs"

[badges]
maintenance = { status = "actively-developed" }

[dependencies]
bare-metal = "1"
block-buffer = "0.9.0"
block-cipher = "0.8.0"
cortex-m = "0.7"
digest = "0.9.0"
embedded-hal = { version = "0.2", features = ["unproven"] }
generic-array = "0.14.3"
lpc55-pac = "0.1.1"

nb = "1"
# no-panic = "0.1.12"
cortex-m-rtic = { version = "0.6.0-alpha.0", optional = true }
# littlefs2 = { path = "../littlefs2", optional = true }
littlefs2 = { git = "https://github.com/nickray/littlefs2", branch = "closures-instead-of-ub", optional = true }
usb-device = "0.2.3"
usbd-serial = "0.1.0"
vcell = "0.1.2"
void = { version = "1", default-features = false }
# aligned = "0.3.2"
# enum_dispatch = { git = "https://gitlab.com/antonok/enum_dispatch" }
# salty = { path = "../salty", features = ["haase"] }

[dev-dependencies]
aes-soft = "0.4"
cortex-m-rt = "0.6"
cortex-m-rtic = "0.6.0-alpha.0"
cortex-m-semihosting = "0.3"
heapless = "0.5"
panic-halt  = "0.2"
panic-semihosting = { version = "0.5", features = ["jlink-quirks"] }
sha2 = { version = "0.9.1", default-features = false }
ssd1306 = "0.3.0-alpha.2"
sha-1 = { version = "0.9.1", default-features = false }

[features]
default = ["rt"]
littlefs = ["littlefs2"]
rt = ["lpc55-pac/rt"]
rtic-peripherals = ["cortex-m-rtic"]
# no longer a HAL feature, just for the usb examples
highspeed-usb-example = []
# # Boards
# lpcxpresso55s69 = []
# solo = []

[profile.release]
codegen-units = 1
debug = true
lto = true
opt-level = "z"

[patch.crates-io]
cortex-m-rtic = { git = "https://github.com/nickray/cortex-m-rtic", branch = "bump-cortex-m" }

